--- a/src/druid.properties
+++ b/src/druid.properties
@@ -1,7 +1,8 @@
 driverClassName=com.mysql.jdbc.Driver
 url=jdbc:mysql:///company?useSSL=false
 username=root
-password=19930918chen
+//need to be changed
+password=?
 
 initialSize=5
 
